better integration with cloudscribe core

--- a/src/cloudscribe.SimpleContactForm/Views/Shared/EmailTemplates/ContactFormSubmitterHtmlEmail.cshtml
+++ b/src/cloudscribe.SimpleContactForm/Views/Shared/EmailTemplates/ContactFormSubmitterHtmlEmail.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "_LayoutEmailNotification";
     ViewData["Title"] = "Thanks for your comment";
+    ViewData["Site"] = Model.Tenant;
 }
 <h3  style="color:#5F5F5F;line-height:125%;font-family:Helvetica,Arial,sans-serif;font-size:20px;font-weight:normal;margin-top:0;margin-bottom:3px;text-align:left;">
    Website Comment
