--- a/src/cloudscribe.SimpleContactForm/Views/Shared/EmailTemplates/ContactFormSubmitterTextEmail.cshtml
+++ b/src/cloudscribe.SimpleContactForm/Views/Shared/EmailTemplates/ContactFormSubmitterTextEmail.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "_LayoutTextEmailNotification";
     ViewData["Title"] = "Thanks for your comment";
+    ViewData["Site"] = Model.Tenant;
 }
 
 Website Comment
